--- a/package.json
+++ b/package.json
@@ -1,27 +1,55 @@
 {
   "name": "haoyuai-child-theme",
   "version": "1.0.0",
-  "description": "HaoYu AI Child Theme for GeneratePress",
-  "main": "index.js",
+  "description": "HaoYu AI Child Theme for GeneratePress - Modern Development Environment",
+  "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run sass:watch\" \"npm run js:watch\"",
-    "build": "npm run sass:build && npm run js:build",
-    "sass:watch": "sass src/scss/main.scss dist/main.css --watch --style=expanded",
-    "sass:build": "sass src/scss/main.scss dist/main.css --style=compressed --no-source-map",
-    "js:watch": "esbuild src/js/main.js --bundle --outfile=dist/main.js --watch --sourcemap",
-    "js:build": "esbuild src/js/main.js --bundle --outfile=dist/main.js --minify"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "build:analyze": "vite build --mode analyze",
+    "type-check": "tsc --noEmit",
+    "lint": "eslint src --ext .js,.ts,.vue",
+    "lint:fix": "eslint src --ext .js,.ts,.vue --fix",
+    "format": "prettier --write \"src/**/*.{js,ts,vue,scss,css}\"",
+    "clean": "rm -rf dist node_modules/.vite"
   },
   "keywords": [
     "wordpress",
     "theme",
     "generatepress",
-    "child-theme"
+    "child-theme",
+    "vite",
+    "typescript",
+    "modern"
   ],
   "author": "Your Name",
   "license": "GPL-2.0-or-later",
   "devDependencies": {
+    "@types/node": "^20.10.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.0",
+    "@typescript-eslint/parser": "^6.13.0",
+    "@vitejs/plugin-legacy": "^5.2.0",
+    "autoprefixer": "^10.4.16",
+    "cssnano": "^6.0.1",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.0",
     "sass": "^1.69.0",
-    "esbuild": "^0.19.0",
-    "concurrently": "^8.2.2"
+    "terser": "^5.24.0",
+    "typescript": "^5.3.0",
+    "vite": "^5.0.0",
+    "vite-plugin-eslint": "^1.8.1"
+  },
+  "dependencies": {
+    "axios": "^1.6.0",
+    "gsap": "^3.12.0",
+    "lodash-es": "^4.17.21"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
